--- a/Hunted Zombie Rush/Assets/Plugins/Android/MainLibProj/AndroidManifest.xml
+++ b/Hunted Zombie Rush/Assets/Plugins/Android/MainLibProj/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!-- the space in these forces it to be interpreted as a string vs. int -->
         <meta-data android:name="com.google.android.gms.games.APP_ID"
-            android:value="\ " />
+            android:value="\ 1042882886250" />
         <meta-data android:name="com.google.android.gms.games.unityVersion"
             android:value="\ 0.9.36" />
         <meta-data android:name="com.google.android.gms.version"
